chores: test high res carousel

--- a/index.qmd
+++ b/index.qmd
@@ -9,22 +9,22 @@ toc: false
   <div class="carousel-container">
     <div class="carousel-track">
       <div class="carousel-slide">
-        <img src="images/isglobal_logo.jpg" alt="ISGlobal - Barcelona Institute for Global Health">
+        <img src="images/ahprc.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/aphrc_logo.png" alt="African Population and Health Research Center">
+        <img src="images/aphrc_logo.png">
       </div>
       <div class="carousel-slide">
-        <img src="images/brge_logo.png" alt="Bioinformatics Research Group in Epidemiology">
+        <img src="images/brge_logo.png">
       </div>
       <div class="carousel-slide">
-        <img src="images/isglobal_logo.jpg" alt="ISGlobal - Barcelona Institute for Global Health">
+        <img src="images/isglobal_logo.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/aphrc_logo.png" alt="African Population and Health Research Center">
+        <img src="images/aphrc_logo.png">
       </div>
       <div class="carousel-slide">
-        <img src="images/brge_logo.png" alt="Bioinformatics Research Group in Epidemiology">
+        <img src="images/brge_logo.png">
       </div>
     </div>
   </div>
